--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^7.3|^8.0",
+        "developercielo/api-3.0-php": "^1.0"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "criarenet\\Cielo\\": "/src/Cielo"
