--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "package",
     "require": {
         "developercielo/api-3.0-php": "1.0",
-        "php": "7.3"
+        "php": ">=7.4"
     },
     "license": "MIT",
     "autoload": {
